grammar.js
    source_file: ($) =>
      repeat(choice($.psql_statement, seq($._statement, ";"))),

    _statement: ($) =>
      choice(
        $.psql_statement,
        $.create_function_statement,
        $.drop_function_statement,
        $.drop_type_statement,
        $.create_table_statement,
        $.create_schema_statement,
        $.create_type_statement,
        $.select_statement,
        $.insert_statement,
        $.delete_statement,
        $.update_statement,
        $.grant_statement,
        $.create_trigger_statement,
        $.create_sequence_statement,
        $.create_index_statement,
        $.alter_table_statement,
        $.do_block
      ),

    update_statement: ($) =>
      seq(
        optional($.with_query),
        kw("update"),
        $.identifier,
        optional(seq(optional(kw("as")), $.identifier)),
        kw("set"),
        commaSep1($.update_set),
        optional(seq(kw("from"), commaSep1($.from_item))),
        optional($.where_filter),
        optional($.returning)
      ),

    _with_query_statement: ($) =>
      choice(
        $.select_statement,
        $.insert_statement,
        $.delete_statement,
        $.update_statement
      ),

    insert_statement: ($) =>
      seq(
        optional($.with_query),
        kw("insert"),
        kw("into"),
        $.identifier,
        optional($.as),
        optional(alias($._list_of_identifiers, $.columns)),
        $.insert_items,
        optional($.insert_conflict),
        optional($.returning),
        optional($.into)
      ),

    insert_items: ($) =>
      choice(
        seq(kw("default"), kw("values")),
        seq(kw("values"), commaSep1($.insert_values)),
        $.select_statement,
        seq("(", $.select_statement, ")")
      ),

    insert_values: ($) => seq("(", commaSep($.insert_item), ")"),

    insert_item: ($) => choice(kw("default"), $._value_expression),

    update_set: ($) =>
      choice(
        seq($.identifier, "=", $.update_value),
        seq(
          $._list_of_identifiers,
          "=",
          optional(kw("row")),
          "(",
          commaSep1($.update_value),
          ")"
        )
      ),

    update_value: ($) => choice(kw("default"), $._value_expression),

    returning: ($) => seq(kw("returning"), commaSep1($.select_item)),

    delete_statement: ($) =>
      seq(
        optional($.with_query),
        kw("delete"),
        kw("from"),
        $.identifier,
        optional(kw("as")),
        optional($.identifier),
        optional($.delete_using),
        optional($.where_filter),
        optional(seq(kw("returning"), commaSep1($.select_item))),
        optional($.into)
      ),

    _plpgsql_statement: ($) =>
      seq(
        choice(
          $._statement,
          $.assign_statement,
          $.get_diagnostics_statement,
          $.open_cursor_statement,
          $.return_statement,
          $.raise_statement,
          $.if_statement,
          $.for_statement,
          $.execute_statement,
          $.perform_statement
        ),
        ";"
      ),

    execute_statement: ($) =>
      seq(
        kw("execute"),
        $._value_expression,
        optional($.into),
        optional($.execute_using)
      ),
    execute_using: ($) => seq(kw("using"), commaSep1($._value_expression)),
    return_statement: ($) =>
      seq(
        kw("return"),
        choice(
          seq(kw("query"), $.select_statement),
          seq(kw("query"), $.execute_statement),
          $._value_expression
        )
      ),
    do_block: ($) => seq(kw("do"), $.block),

    select_statement: ($) =>
      prec.left(
        seq(
          optional($.with_query),
          kw("select"),
          commaSep($.select_item),
          optional($.into),
          optional($.select_from),
          optional($.select_where),
          optional($.select_group_by),
          optional($.select_having),
          optional($.select_order_by),
          optional($._select_limit_offset),
          optional($.into)
        )
      ),

    with_query: ($) => seq(kw("with"), commaSep1($.with_query_item)),

    with_query_item: ($) =>
      seq(
        $.identifier,
        optional($._list_of_identifiers),
        kw("as"),
        optional(
          choice(kw("materialized"), seq(kw("not"), kw("materialized")))
        ),
        "(",
        $._with_query_statement,
        ")"
      ),

    _select_limit_offset: ($) =>
      choice(
        seq($.select_limit, optional($.select_offset)),
        seq($.select_offset, optional($.select_limit))
      ),

    select_item: ($) =>
      seq($._value_expression, optional(kw("as")), optional($.identifier)),

    select_from: ($) => seq(kw("from"), commaSep1($.from_item)),

    from_item: ($) =>
      prec.left(
        seq(
          // TODO(chrde): https://www.postgresql.org/docs/current/sql-select.html
          choice($.from_select, $.from_table, $.from_function),
          repeat($.join_item)
        )
      ),

    from_table: ($) =>
      seq($.identifier, optional(kw("as")), optional($.identifier)),

    block: ($) =>
      seq($.dollar_quote, repeat($.declarations), $.body, $.dollar_quote),

    body: ($) =>
      seq(kw("begin"), repeat($._plpgsql_statement), kw("end"), optional(";")),

    dollar_quote: ($) => seq("$", optional($.identifier), "$"),

    _value_expression: ($) =>
      choice(
        $.number,
        $.dollar_quote_string,
        $.string,
        $.true,
        $.false,
        $.null,
        $.star,
        seq("(", $.select_statement, ")"),
        seq("(", commaSep1($._value_expression), ")"),
        $.function_call,
        $.array_constructor,
        $.op_expression,
        $.time_expression,
        // TODO(chrde): this one feels a bit hacky? perhaps move to identifier regexp
        seq($.identifier, ".", $.star),
        $.identifier
      ),

    dollar_quote_string: ($) =>
      seq(
        "$",
        $._identifier,
        "$",
        /(([^$]+)|(%\d+\$[sI])|(\$\d+))+/,
        //                     ^
        //                     |- matches $1 (execute ... using placeholders)
        //           ^
        //           |- matches %d1s (format placeholders)
        //  ^
        //  |- matches anything other than $
        "$",
        $._identifier,
        "$"
      ),

    function_call: ($) =>
      seq(
        $.identifier,
        "(",
        choice($.select_statement, commaSep($._value_expression)),
        ")"
      ),

    _list_of_identifiers: ($) => seq("(", commaSep($.identifier), ")"),

    // TODO(chrde): https://www.postgresql.org/docs/13/sql-syntax-lexical.html
    star: ($) => "*",

    number: ($) => /-?\d+/,

    identifier: ($) => $._identifier,

    _identifier: ($) => /[a-zA-Z0-9_]+(\.?[a-zA-Z0-9_]+)*/,
    //                                ^
    //                                |- we dont want to match consecutive dots, e.g: 1..2 consists of 3 tokens
  },
});
