test/corpus/plpgsql/return_statement.txt
================================================================================
return
================================================================================
DO $$
BEGIN
    RETURN 1;
END
$$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (return_statement
          (number)))
      (dollar_quote))))

================================================================================
return query
================================================================================
DO $$
BEGIN
    RETURN QUERY select 1;
END
$$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (return_statement
          (select_statement
            (select_item
              (number)))))
      (dollar_quote))))

================================================================================
return query execute
================================================================================
DO $$
BEGIN
    RETURN QUERY execute format($sql$ select %1$s, $1;$sql$, _foo) using bar;
END
$$;
--------------------------------------------------------------------------------

(source_file
  (do_block
    (block
      (dollar_quote)
      (body
        (return_statement
          (execute_statement
            (function_call
              (identifier)
              (dollar_quote_string)
              (identifier))
            (execute_using
              (identifier)))))
      (dollar_quote))))
